my-app/frontend-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hr-portal-route
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`hr-portal.local`)
    kind: Rule
    services:
    - name: hr-portal
      port: 80
  tls: {}
